--- a/next/package.json
+++ b/next/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@carterduong/p-img": "^0.1.0",
+    "@sanity/client": "^7.15.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
